generate service category and fix service
