# src/entity/Services.ts
@@ -1,9 +1,17 @@
-import { Entity, PrimaryGeneratedColumn, Column, CreateDateColumn, ManyToOne } from 'typeorm';
-import { User } from './User';
-import { ServiceCategory } from './SeviceCategory';
-import { BrokerOffice } from './BrokerOffice';
+import {
+  Entity,
+  PrimaryGeneratedColumn,
+  Column,
+  CreateDateColumn,
+  ManyToOne,
+  OneToMany,
+} from "typeorm";
+import { User } from "./User";
+import { ServiceCategory } from "./SeviceCategory";
+import { BrokerOffice } from "./BrokerOffice";
+import { brokerService } from "./BrokerService";
 
-@Entity('services')
+@Entity("services")
 export class Service {
   @PrimaryGeneratedColumn()
   id: number;
@@ -11,35 +19,34 @@ export class Service {
   @Column()
   title: string;
 
-  @Column('text')
+  @Column("text")
   description: string;
 
   @Column()
   location: string;
 
-  @Column('decimal')
-  price: number;
+  // @Column('decimal')
+  // price: number;
 
-  @Column('jsonb')
-  details: Record<string, any>;
+  // @Column('jsonb')
+  // details: Record<string, any>;
 
-  @Column({ default: false })
-  isActive: boolean;
+  // @Column({ default: false })
+  // isActive: boolean;
 
   @Column({
-    type: 'enum',
-    enum: ['cars', 'properties'],
+    type: "enum",
+    enum: ["cars", "properties"],
   })
   type: string;
 
   @ManyToOne(() => ServiceCategory)
   category: ServiceCategory;
 
-  @ManyToOne(() => User)
-  user: User;
-
-  @ManyToOne(() => BrokerOffice, { nullable: true })
-  broker_office: BrokerOffice;
+  @OneToMany(() => brokerService, (borkerService) => borkerService.service, {
+    nullable: true,
+  })
+  broker_office: brokerService[];
 
   @CreateDateColumn()
   created_at: Date;
